# apecode

./: README.md  pyproject.toml
src/apecode/: __main__.py  cli.py
tests/: test_cli.py
